fix: remove double prefix in swagger annotatioins
