# swagger/swagger.json
@@ -766,193 +766,6 @@
                 }
             }
         },
-        "/api/api/Callback": {
-            "post": {
-                "tags": [
-                    "Callback API"
-                ],
-                "description": "Get Login Error Counts",
-                "operationId": "ApiController.Callback"
-            }
-        },
-        "/api/api/get-captcha": {
-            "get": {
-                "tags": [
-                    "Login API"
-                ],
-                "operationId": "ApiController.GetCaptcha"
-            }
-        },
-        "/api/api/get-captcha-status": {
-            "get": {
-                "tags": [
-                    "Token API"
-                ],
-                "description": "Get Login Error Counts",
-                "operationId": "ApiController.GetCaptchaStatus",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "id",
-                        "description": "The id ( owner/name ) of user",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/api/get-webhook-event": {
-            "get": {
-                "tags": [
-                    "GetWebhookEventType API"
-                ],
-                "operationId": "ApiController.GetWebhookEventType"
-            }
-        },
-        "/api/api/reset-email-or-phone": {
-            "post": {
-                "tags": [
-                    "Account API"
-                ],
-                "operationId": "ApiController.ResetEmailOrPhone"
-            }
-        },
-        "/api/api/send-email": {
-            "post": {
-                "tags": [
-                    "Service API"
-                ],
-                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
-                "operationId": "ApiController.SendEmail",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "clientId",
-                        "description": "The clientId of the application",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "clientSecret",
-                        "description": "The clientSecret of the application",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "from",
-                        "description": "Details of the email request",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.EmailForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "object",
-                        "schema": {
-                            "$ref": "#/definitions/Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/api/send-notification": {
-            "post": {
-                "tags": [
-                    "Service API"
-                ],
-                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
-                "operationId": "ApiController.SendNotification",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "from",
-                        "description": "Details of the notification request",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.NotificationForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "object",
-                        "schema": {
-                            "$ref": "#/definitions/Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/api/send-sms": {
-            "post": {
-                "tags": [
-                    "Service API"
-                ],
-                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
-                "operationId": "ApiController.SendSms",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "clientId",
-                        "description": "The clientId of the application",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "clientSecret",
-                        "description": "The clientSecret of the application",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "from",
-                        "description": "Details of the sms request",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.SmsForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "object",
-                        "schema": {
-                            "$ref": "#/definitions/Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/api/verify-code": {
-            "post": {
-                "tags": [
-                    "Verification API"
-                ],
-                "operationId": "ApiController.VerifyCode"
-            }
-        },
-        "/api/api/webhook": {
-            "post": {
-                "tags": [
-                    "HandleOfficialAccountEvent API"
-                ],
-                "operationId": "ApiController.HandleOfficialAccountEvent"
-            }
-        },
         "/api/batch-enforce": {
             "post": {
                 "tags": [
@@ -1024,6 +837,15 @@
                         }
                     }
                 }
+            }
+        },
+        "/api/callback": {
+            "post": {
+                "tags": [
+                    "Callback API"
+                ],
+                "description": "Get Login Error Counts",
+                "operationId": "ApiController.Callback"
             }
         },
         "/api/check-user-password": {
@@ -1949,6 +1771,40 @@
                             "items": {
                                 "$ref": "#/definitions/object.Application"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/get-captcha": {
+            "get": {
+                "tags": [
+                    "Login API"
+                ],
+                "operationId": "ApiController.GetCaptcha"
+            }
+        },
+        "/api/get-captcha-status": {
+            "get": {
+                "tags": [
+                    "Token API"
+                ],
+                "description": "Get Login Error Counts",
+                "operationId": "ApiController.GetCaptchaStatus",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "id",
+                        "description": "The id ( owner/name ) of user",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
                         }
                     }
                 }
@@ -3750,6 +3606,14 @@
                 }
             }
         },
+        "/api/get-webhook-event": {
+            "get": {
+                "tags": [
+                    "GetWebhookEventType API"
+                ],
+                "operationId": "ApiController.GetWebhookEventType"
+            }
+        },
         "/api/get-webhooks": {
             "get": {
                 "tags": [
@@ -3938,6 +3802,65 @@
                         "description": "The Response object",
                         "schema": {
                             "$ref": "#/definitions/controllers.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/login/oauth/access_token": {
+            "post": {
+                "tags": [
+                    "Token API"
+                ],
+                "description": "get OAuth access token",
+                "operationId": "ApiController.GetOAuthToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "grant_type",
+                        "description": "OAuth grant type",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "client_id",
+                        "description": "OAuth client id",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "client_secret",
+                        "description": "OAuth client secret",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "code",
+                        "description": "OAuth code",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.TokenWrapper"
+                        }
+                    },
+                    "400": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.TokenError"
+                        }
+                    },
+                    "401": {
+                        "description": "The Response object",
+                        "schema": {
+                            "$ref": "#/definitions/object.TokenError"
                         }
                     }
                 }
@@ -4214,6 +4137,14 @@
                 }
             }
         },
+        "/api/reset-email-or-phone": {
+            "post": {
+                "tags": [
+                    "Account API"
+                ],
+                "operationId": "ApiController.ResetEmailOrPhone"
+            }
+        },
         "/api/run-syncer": {
             "get": {
                 "tags": [
@@ -4242,6 +4173,48 @@
                 }
             }
         },
+        "/api/send-email": {
+            "post": {
+                "tags": [
+                    "Service API"
+                ],
+                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
+                "operationId": "ApiController.SendEmail",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "clientId",
+                        "description": "The clientId of the application",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "clientSecret",
+                        "description": "The clientSecret of the application",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "from",
+                        "description": "Details of the email request",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.EmailForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "object",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/send-invite": {
             "post": {
                 "tags": [
@@ -4257,6 +4230,76 @@
                     },
                     "500": {
                         "description": "Internal server error"
+                    }
+                }
+            }
+        },
+        "/api/send-notification": {
+            "post": {
+                "tags": [
+                    "Service API"
+                ],
+                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
+                "operationId": "ApiController.SendNotification",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "from",
+                        "description": "Details of the notification request",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.NotificationForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "object",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/send-sms": {
+            "post": {
+                "tags": [
+                    "Service API"
+                ],
+                "description": "This API is not for Casdoor frontend to call, it is for Casdoor SDKs.",
+                "operationId": "ApiController.SendSms",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "clientId",
+                        "description": "The clientId of the application",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "clientSecret",
+                        "description": "The clientSecret of the application",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "from",
+                        "description": "Details of the sms request",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.SmsForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "object",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
                     }
                 }
             }
@@ -5406,6 +5449,14 @@
                 "operationId": "ApiController.VerifyCaptcha"
             }
         },
+        "/api/verify-code": {
+            "post": {
+                "tags": [
+                    "Verification API"
+                ],
+                "operationId": "ApiController.VerifyCode"
+            }
+        },
         "/api/webauthn/signin/begin": {
             "get": {
                 "tags": [
@@ -5512,63 +5563,12 @@
                 }
             }
         },
-        "/apiapi/login/oauth/access_token": {
+        "/api/webhook": {
             "post": {
                 "tags": [
-                    "Token API"
+                    "HandleOfficialAccountEvent API"
                 ],
-                "description": "get OAuth access token",
-                "operationId": "ApiController.GetOAuthToken",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "grant_type",
-                        "description": "OAuth grant type",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "client_id",
-                        "description": "OAuth client id",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "client_secret",
-                        "description": "OAuth client secret",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "code",
-                        "description": "OAuth code",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "The Response object",
-                        "schema": {
-                            "$ref": "#/definitions/object.TokenWrapper"
-                        }
-                    },
-                    "400": {
-                        "description": "The Response object",
-                        "schema": {
-                            "$ref": "#/definitions/object.TokenError"
-                        }
-                    },
-                    "401": {
-                        "description": "The Response object",
-                        "schema": {
-                            "$ref": "#/definitions/object.TokenError"
-                        }
-                    }
-                }
+                "operationId": "ApiController.HandleOfficialAccountEvent"
             }
         }
     },
